# PQsampling

./: CMakeLists.txt  README.md  bruteForce.hpp  burst.h  burst.hpp  checks.h  checks.hpp  draw.h  draw.hpp  drawDef.hpp  greensFunct.hpp  greensFunctDef.hpp  init.h  init.hpp  main  main.c  main.cpp  main2  main2.cpp  parameters.h  parameters.hpp  print.hpp  run_BM.hpp  run_GF.hpp  run_aGF1.hpp  run_aGF2.hpp  run_hybGF_P.hpp  run_hybGF_PQ.hpp  run_hybGF_PQ_proj.hpp  run_hybGF_P_proj.hpp  shell.h  shell.hpp  step.h  step.hpp  tools.h  tools.hpp  toolsAnnih.h  toolsAnnih.hpp  tools_annih.h
Annihilation/: main.cpp  main_annih.cpp  run_annih_BM.hpp  run_annih_P.hpp  tools_annih.h
Annihilation_proj/: main.cpp  run_annih_P_proj.hpp
BD/: bruteForce.hpp  run_BD.hpp  run_annih_BD.h  run_annih_BD.hpp
Brute_force/: run_BM.hpp
Fig1/: Fig1.eps  fig1.hpp  main  main.cpp  plot.out  plot.py
Fig2/: BM2.txt  Fig2.eps  fig2_annih.hpp  fig2_diff.hpp  main.cpp  main_BM.cpp  main_GF.cpp  main_annih.cpp  main_diff.cpp  plot.py  plotGF.out  plot_annih.out  plot_diff.out  run_annih_P.hpp  run_annih_PQ.hpp  run_hybGF_P.h  run_hybGF_P.hpp  run_hybGF_PQ.h  run_hybGF_PQ.hpp  text
Fig3/: Fig3.eps  main  main_GFproj.cpp  plot.py
Fig4/: Fig3.eps  fig4_annih_proj.hpp  fig4_diff_proj.h  fig4_diff_proj.hpp  main.cpp  main_GFproj.cpp  main_annih_proj.cpp  main_diff_proj.cpp  plot.py  plotBM.out  plotGF_proj.out  plot_annih_proj.out  plot_diff_proj.out  run_annih_PQ_proj.hpp  run_annih_P_proj.hpp  run_hybGF_PQ_proj.h  run_hybGF_PQ_proj.hpp  run_hybGF_P_proj.h  run_hybGF_P_proj.hpp
